objects/LLC_BI__Communication_Provider__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The 3rd party communication providers that interact with the LifeCycle product</description>
    <fields>
        <fullName>LLC_BI__Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this communication provider is billed via the LifeCycle product</description>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Class_Name__c</fullName>
        <description>The name of the concrete class that implements the ILifeCycleCommunicator interface</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Destination__c</fullName>
        <description>The destination address of the 3rd party for the communicator.</description>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is optional. It is manually populated. It identifies whether a Third Party Communication Provider can send data to nCino. Checked = True. Unchecked = False.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Communication Providers</label>
</CustomObject>